--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,11 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".views.LaunchActivity">
+    tools:context=".views.LoginActivity">
 
     <data>
         <variable
-            name="LoginViewModel"
+            name="model"
             type="com.example.tourapp.viewModel.LoginViewModel"/>
     </data>
 
