--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="model"
-            type="com.example.tourapp.viewModel.LoginViewModel"/>
+            type="com.example.tourapp.viewModel.RegisterViewModel"/>
     </data>
 
     <LinearLayout
