--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,14 @@
                 android:elevation="4dp"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-            <FrameLayout
+
+            <fragment
                 android:id="@+id/fragment_host"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                app:defaultNavHost="true"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                app:navGraph="@navigation/navigation_graph"/>
         </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
