--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -2,6 +2,16 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation_graph">
+    android:id="@+id/navigation_graph"
+    app:startDestination="@layout/fragment_user_data">
+
+    <fragment
+        android:id="@+id/userDataFragment"
+        android:name="com.example.tourapp.views.UserDataFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_user_data" >
+
+
+    </fragment>
 
 </navigation>
