Navigation Graph funciona!!!!

--- a/app/src/main/res/layout/fragment_user_data.xml
+++ b/app/src/main/res/layout/fragment_user_data.xml
@@ -11,11 +11,13 @@
             type="com.example.tourapp.viewModel.UserViewModel"/>
     </data>
 
-   <androidx.constraintlayout.widget.ConstraintLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
+  <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
 
-
-
-   </androidx.constraintlayout.widget.ConstraintLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="PRUEBAAAA" />
+  </FrameLayout>
 </layout>
