--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -3,15 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph"
-    app:startDestination="@layout/fragment_user_data">
+    app:startDestination="@id/editUserFragment">
+
+    <fragment
+        android:id="@+id/editUserFragment"
+        android:name="com.example.tourapp.views.EditUserFragment"
+        tools:layout="@layout/fragment_edit_user">
+        <action
+            android:id="@+id/action_editUserFragment_to_userDataFragment2"
+            app:destination="@id/userDataFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/userDataFragment"
         android:name="com.example.tourapp.views.UserDataFragment"
-        android:label="@string/app_name"
         tools:layout="@layout/fragment_user_data" >
-
-
+        <action
+            android:id="@+id/action_userDataFragment_to_editUserFragment"
+            app:destination="@id/editUserFragment" />
     </fragment>
+
 
 </navigation>
