--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -79,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="Contraseña"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Signup Button -->
@@ -91,7 +91,7 @@
             android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:onClick="onRegisterClick"
-            android:text="Create Account"/>
+            android:text="@string/btn_crear_cuenta"/>
 
        <!-- <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
