--- a/app/src/main/res/layout/user_item_layout.xml
+++ b/app/src/main/res/layout/user_item_layout.xml
@@ -13,6 +13,11 @@
             name="position"
             type="int" />
     </data>
+    <LinearLayout
+        android:id="@+id/layout_user"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 <TableLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +25,7 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingBottom="@dimen/margin_20">
 
 
@@ -40,7 +45,7 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingBottom="@dimen/margin_20">
 
 
@@ -60,7 +65,7 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingBottom="@dimen/margin_20">
 
         <TextView
@@ -78,4 +83,5 @@
     </TableRow>
 
 </TableLayout>
+    </LinearLayout>
 </layout>
