--- a/app/src/main/res/layout/fragment_place_data.xml
+++ b/app/src/main/res/layout/fragment_place_data.xml
@@ -30,7 +30,8 @@
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_placeName">
+        app:layout_constraintTop_toBottomOf="@+id/tv_placeName"
+        android:visibility="gone">
 
         <com.smarteist.autoimageslider.SliderView
             android:id="@+id/sliderView"
