--- a/app/src/main/res/layout/place_list_item.xml
+++ b/app/src/main/res/layout/place_list_item.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/blackborder"
     android:orientation="vertical"
     android:paddingStart="@dimen/margin_10"
     android:paddingBottom="@dimen/margin_16"
