--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -1,30 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/ll_comment_layout"
+
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+    android:elevation="4dp">
+
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_comment_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingStart="@dimen/margin_10"
     android:paddingBottom="@dimen/margin_16"
     android:paddingLeft="@dimen/margin_10"
-    android:background="@drawable/blackborder">
+    android:background="@drawable/greyborder">
 
-
-    <TextView
-        android:id="@+id/tv_comment_user"
-        android:layout_marginTop="16dp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nombre usuario"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp">
+
+        <TextView
+            android:id="@+id/tv_comment_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nombre usuario"
+            android:layout_marginTop="@dimen/margin_8"
+            android:textColor="@color/black"
+            android:layout_weight="1"
+            android:textStyle="bold"/>
+
+        <ImageView
+            android:id="@+id/iv_button_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/margin_8"
+            android:src="@drawable/ic_baseline_dots_vert_24" />
+
+    </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="14dp">
 
         <TextView
             android:id="@+id/tv_comment_text"
@@ -38,3 +62,5 @@
     </LinearLayout>
 
 </LinearLayout>
+
+</androidx.cardview.widget.CardView>
