--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -11,7 +11,7 @@
         android:id="@+id/icon_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_contact_round" />
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
