--- a/app/src/main/res/layout/dialog_name_list.xml
+++ b/app/src/main/res/layout/dialog_name_list.xml
@@ -10,7 +10,7 @@
 
 
     <EditText
-        android:id="@+id/et_edit_comment"
+        android:id="@+id/et_name_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -21,7 +21,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        android:hint="Introduce nombre lista"
+        android:hint="Nombre lista"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,19 +30,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_comment">
+        app:layout_constraintTop_toBottomOf="@+id/et_name_list">
 
         <Button
-            android:id="@+id/btn_edit_cancel"
+            android:id="@+id/btn_name_list_cancel"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -54,10 +52,10 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/btn_edit_accept"
+            android:id="@+id/btn_name_list_accept"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/editcomment_btn" />
+            android:text="Aceptar" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
