Pongo limite a descarga lugares y coemntarios y actualizo cuando bajo lista.
Soluciono problema de onbackpressed entre PlaceDataFragment.kt y CommentListFragment.kt

Creo función dar de baja usuario en MainActivity.kt

--- a/app/src/main/res/menu/placedata_menu.xml
+++ b/app/src/main/res/menu/placedata_menu.xml
@@ -8,6 +8,10 @@
             android:id="@+id/opt_edit_place"
             android:title="@string/opt_edit_place" />
 
+        <item
+            android:id="@+id/opt_delete_place"
+            android:title="@string/opt_delete_place" />
+
     </group>
 
 </menu>
