--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".views.RegisterActivity">
@@ -10,7 +11,13 @@
             type="com.example.tourapp.viewModel.RegisterViewModel"/>
     </data>
 
+    <FrameLayout
+        android:id="@+id/frame_layout_register"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
+        android:id="@+id/ll_register"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -90,7 +97,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="@string/btn_crear_cuenta"/>
+            android:text="@string/btn_select_tags"/>
 
        <!-- <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
@@ -101,5 +108,7 @@
             android:textSize="16dip"/>-->
 
     </LinearLayout>
+
+    </FrameLayout>
 
 </layout>
