--- a/app/src/main/res/layout/dialog_delete_place.xml
+++ b/app/src/main/res/layout/dialog_delete_place.xml
@@ -5,26 +5,23 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginHorizontal="@dimen/size_20"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <EditText
-        android:id="@+id/et_edit_comment"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_delete"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:hint="@string/hint_edit_comment"
+        android:text="@string/place_tv_delete"
+        android:textColor="@color/black"
+        android:textSize="@dimen/size_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,14 +36,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_comment">
+        app:layout_constraintTop_toBottomOf="@+id/tv_delete">
 
         <Button
-            android:id="@+id/btn_edit_cancel"
+            android:id="@+id/btn_delete_cancel"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/btn_cancelar" />
+            android:text="@string/place_delete_cancel" />
 
         <Space
             android:layout_width="wrap_content"
@@ -54,10 +51,10 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/btn_edit_accept"
+            android:id="@+id/btn_delete_accept"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/editcomment_btn" />
+            android:text="@string/place_delete_accept" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
