--- a/app/src/main/res/layout/fragment_register_tags.xml
+++ b/app/src/main/res/layout/fragment_register_tags.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/ll_register_tags"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,11 +8,21 @@
     android:orientation="vertical"
     tools:context=".views.RegisterTagsFragment">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginHorizontal="@dimen/margin_8"
+        android:layout_marginTop="@dimen/size_20"
+        android:layout_marginBottom="@dimen/margin_16"
+        android:fontFamily="@font/calibri"
+        android:text="@string/tv_select_tags"
+        android:textSize="@dimen/size_35" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_register_tags"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:layout_weight="1"/>
 
