--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,9 @@
     <!-- Dimensiones del menu -->
 
     <dimen name="size_20">20sp</dimen>
+    <dimen name="size_25">25sp</dimen>
+    <dimen name="size_30">30sp</dimen>
+    <dimen name="size_35">35sp</dimen>
     <dimen name="size_40">40sp</dimen>
 
 
